--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     ],
     "minimum-stability": "stable",
     "require": {
-        "php": "^8.0"
+        "php": "^8.0",
+        "tymon/jwt-auth": "^1.0"
     },
     "extra": {
         "laravel": {
